--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.8)
 
-project(BetterSunshineModule VERSION 1.0)
+project(BetterSunshineMoveset VERSION 1.0)
 
 set(CMAKE_CXX_STANDARD 20)
 
@@ -11,19 +11,19 @@ file(GLOB BETTER_MOVESET_SRC
     "include/*.hxx"
 )
 
-add_executable(BetterSunshineModule ${BETTER_MOVESET_SRC})
+add_executable(BetterSunshineMoveset ${BETTER_MOVESET_SRC} "src/rocketdive.cpp")
 add_subdirectory(lib/BetterSunshineEngine)
 
-target_link_libraries(BetterSunshineModule PUBLIC BetterSunshineEngine)
+target_link_libraries(BetterSunshineMoveset PUBLIC BetterSunshineEngine)
 
-target_include_directories(BetterSunshineModule PUBLIC "include")
+target_include_directories(BetterSunshineMoveset PUBLIC "include")
 
-target_compile_options(BetterSunshineModule PUBLIC ${SMS_COMPILE_FLAGS})
-target_link_options(BetterSunshineModule PUBLIC ${SMS_LINK_FLAGS})
+target_compile_options(BetterSunshineMoveset PUBLIC ${SMS_COMPILE_FLAGS})
+target_link_options(BetterSunshineMoveset PUBLIC ${SMS_LINK_FLAGS})
 
 list(APPEND BETTER_MOVESET_CONFIG_DEFINES "KURIBO_NO_TYPES" "BETTER_MOVESET_VERSION=\"v1.0\"")
 
-target_compile_definitions(BetterSunshineModule PUBLIC ${BETTER_MOVESET_CONFIG_DEFINES})
+target_compile_definitions(BetterSunshineMoveset PUBLIC ${BETTER_MOVESET_CONFIG_DEFINES})
 
 add_custom_target(${PROJECT_NAME}.kxe ALL DEPENDS ${PROJECT_NAME})
 add_custom_command(
