Migrate BetterSunshineEngine things over

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ set(CMAKE_CXX_STANDARD 20)
 file(GLOB BETTER_MOVESET_SRC
     "src/*.c"
     "src/*.cpp"
+    "src/moveset/*.c"
+    "src/moveset/*.cpp"
     "include/*.h"
     "include/*.hxx"
 )
